syntax = "proto3";

package ecommerce.v1;

import "google/protobuf/timestamp.proto";
import "ecommerce/v1/common.proto";

service BackofficeService {
  rpc ListProducts(ListProductsAdminRequest) returns (ListProductsAdminResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc ListCategories(ListCategoriesAdminRequest) returns (ListCategoriesAdminResponse);
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse);
  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse);
  rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse);
  rpc ReorderCategories(ReorderCategoriesRequest) returns (ReorderCategoriesResponse);

  rpc ListVariants(ListVariantsAdminRequest) returns (ListVariantsAdminResponse);
  rpc ListSkus(ListSkusAdminRequest) returns (ListSkusAdminResponse);
  rpc CreateVariant(CreateVariantRequest) returns (CreateVariantResponse);
  rpc UpdateVariant(UpdateVariantRequest) returns (UpdateVariantResponse);

  rpc ListMediaAssets(ListMediaAssetsRequest) returns (ListMediaAssetsResponse);
  rpc CreateMediaAsset(CreateMediaAssetRequest) returns (CreateMediaAssetResponse);
  rpc CreateMediaUploadUrl(CreateMediaUploadUrlRequest) returns (CreateMediaUploadUrlResponse);
  rpc ListSkuImages(ListSkuImagesRequest) returns (ListSkuImagesResponse);
  rpc SetSkuImages(SetSkuImagesRequest) returns (SetSkuImagesResponse);
  rpc ListDigitalAssets(ListDigitalAssetsRequest) returns (ListDigitalAssetsResponse);
  rpc CreateDigitalAsset(CreateDigitalAssetRequest) returns (CreateDigitalAssetResponse);
  rpc CreateDigitalUploadUrl(CreateDigitalUploadUrlRequest) returns (CreateDigitalUploadUrlResponse);
  rpc CreateDigitalDownloadUrl(CreateDigitalDownloadUrlRequest) returns (CreateDigitalDownloadUrlResponse);

  rpc SetInventory(SetInventoryRequest) returns (SetInventoryResponse);

  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);

  rpc CreateShipment(CreateShipmentRequest) returns (CreateShipmentResponse);
  rpc UpdateShipmentStatus(UpdateShipmentStatusRequest) returns (UpdateShipmentStatusResponse);

  rpc CreatePromotion(CreatePromotionRequest) returns (CreatePromotionResponse);
  rpc UpdatePromotion(UpdatePromotionRequest) returns (UpdatePromotionResponse);
}

message ProductAdmin {
  string id = 1;
  string vendor_id = 2;
  string title = 3;
  string description = 4;
  string status = 5;
  google.protobuf.Timestamp updated_at = 6;
  string store_id = 7;
  string tax_rule_id = 8;
  google.protobuf.Timestamp sale_start_at = 9;
  google.protobuf.Timestamp sale_end_at = 10;
  string primary_category_id = 11;
  repeated string category_ids = 12;
}

message VariantAxis {
  string name = 1;
  uint32 position = 2;
}

message VariantAxisValue {
  string name = 1;
  string value = 2;
}

message DefaultVariantInput {
  string sku = 1;
  string fulfillment_type = 2; // physical | digital
  Money price = 3;
  Money compare_at = 4;
  string status = 5;
  string jan_code = 6;
}

message VariantAdmin {
  string id = 1;
  string product_id = 2;
  string sku = 3;
  string fulfillment_type = 4; // physical | digital
  Money price = 5;
  Money compare_at = 6;
  string status = 7;
  string tax_rule_id = 8;
  repeated VariantAxisValue axis_values = 9;
  string jan_code = 10;
}

message SkuAdmin {
  string id = 1;
  string sku = 2;
  string product_id = 3;
  string product_title = 4;
  string fulfillment_type = 5;
  Money price = 6;
  string status = 7;
  string jan_code = 8;
}

message MediaAsset {
  string id = 1;
  string public_url = 2;
  string provider = 3;
  string bucket = 4;
  string object_key = 5;
  string content_type = 6;
  int64 size_bytes = 7;
  google.protobuf.Timestamp created_at = 8;
}

message SkuImage {
  string asset_id = 1;
  string public_url = 2;
  int32 position = 3;
  MediaAsset asset = 4;
}

message SkuImageInput {
  string asset_id = 1;
  int32 position = 2;
}

message InventoryAdmin {
  string variant_id = 1;
  string location_id = 2;
  int32 stock = 3;
  int32 reserved = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message OrderAdmin {
  string id = 1;
  string customer_id = 2;
  OrderStatus status = 3;
  Money total = 4;
  PaymentMethod payment_method = 5;
  google.protobuf.Timestamp created_at = 6;
}

message ShipmentAdmin {
  string id = 1;
  string order_id = 2;
  string vendor_id = 3;
  ShipmentStatus status = 4;
  string tracking_no = 5;
  string carrier = 6;
}

message PromotionAdmin {
  string id = 1;
  string code = 2;
  string discount_type = 3; // fixed | percent
  Money value = 4;
  string status = 5;
  google.protobuf.Timestamp starts_at = 6;
  google.protobuf.Timestamp ends_at = 7;
}

message ListProductsAdminRequest {
  TenantContext tenant = 1;
  string vendor_id = 2; // optional for mall mode
  PageInfo page = 3;
  StoreContext store = 10;
}

message ListProductsAdminResponse {
  repeated ProductAdmin products = 1;
  PageResult page = 2;
}

message ListVariantsAdminRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string product_id = 3;
  PageInfo page = 4;
}

message ListVariantsAdminResponse {
  repeated VariantAdmin variants = 1;
  PageResult page = 2;
  repeated VariantAxis variant_axes = 3;
}

message ListSkusAdminRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string query = 3;
  PageInfo page = 4;
}

message ListSkusAdminResponse {
  repeated SkuAdmin skus = 1;
  PageResult page = 2;
}

message CreateProductRequest {
  TenantContext tenant = 1;
  string vendor_id = 2;
  string title = 3;
  string description = 4;
  string status = 5;
  ActorContext actor = 6;
  string tax_rule_id = 7;
  repeated VariantAxis variant_axes = 8;
  DefaultVariantInput default_variant = 9;
  StoreContext store = 10;
  google.protobuf.Timestamp sale_start_at = 11;
  google.protobuf.Timestamp sale_end_at = 12;
  string primary_category_id = 13;
  repeated string category_ids = 14;
}

message CreateProductResponse {
  ProductAdmin product = 1;
}

message UpdateProductRequest {
  TenantContext tenant = 1;
  string product_id = 2;
  string title = 3;
  string description = 4;
  string status = 5;
  ActorContext actor = 6;
  string tax_rule_id = 7;
  StoreContext store = 10;
  google.protobuf.Timestamp sale_start_at = 11;
  google.protobuf.Timestamp sale_end_at = 12;
  bool apply_tax_rule_to_variants = 13;
  string primary_category_id = 14;
  repeated string category_ids = 15;
}

message UpdateProductResponse {
  ProductAdmin product = 1;
}

message Category {
  string id = 1;
  string store_id = 2;
  string name = 3;
  string slug = 4;
  string description = 5;
  string status = 6;
  string parent_id = 7;
  int32 position = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message CategoryInput {
  string name = 1;
  string slug = 2;
  string description = 3;
  string status = 4;
  string parent_id = 5;
  int32 position = 6;
}

message ListCategoriesAdminRequest {
  StoreContext store = 1;
  string status = 2;
}

message ListCategoriesAdminResponse {
  repeated Category categories = 1;
}

message CreateCategoryRequest {
  StoreContext store = 1;
  CategoryInput category = 2;
  ActorContext actor = 3;
}

message CreateCategoryResponse {
  Category category = 1;
}

message UpdateCategoryRequest {
  StoreContext store = 1;
  string category_id = 2;
  CategoryInput category = 3;
  ActorContext actor = 4;
}

message UpdateCategoryResponse {
  Category category = 1;
}

message DeleteCategoryRequest {
  StoreContext store = 1;
  string category_id = 2;
  ActorContext actor = 3;
}

message DeleteCategoryResponse {
  bool deleted = 1;
}

message ReorderCategoriesRequest {
  StoreContext store = 1;
  string parent_id = 2;
  repeated string ordered_ids = 3;
  ActorContext actor = 4;
}

message ReorderCategoriesResponse {
  repeated Category categories = 1;
}

message CreateVariantRequest {
  TenantContext tenant = 1;
  string product_id = 2;
  string sku = 3;
  string fulfillment_type = 4; // physical | digital
  Money price = 5;
  Money compare_at = 6;
  string status = 7;
  ActorContext actor = 8;
  repeated VariantAxisValue axis_values = 9;
  string jan_code = 10;
}

message CreateVariantResponse {
  VariantAdmin variant = 1;
}

message UpdateVariantRequest {
  TenantContext tenant = 1;
  string variant_id = 2;
  Money price = 3;
  Money compare_at = 4;
  string status = 5;
  string fulfillment_type = 6; // optional
  ActorContext actor = 7;
  string jan_code = 8;
}

message UpdateVariantResponse {
  VariantAdmin variant = 1;
}

message ListMediaAssetsRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string query = 3;
  PageInfo page = 4;
}

message ListMediaAssetsResponse {
  repeated MediaAsset assets = 1;
  PageResult page = 2;
}

message CreateMediaAssetRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  MediaAsset asset = 3;
  ActorContext actor = 4;
}

message CreateMediaAssetResponse {
  MediaAsset asset = 1;
}

message CreateMediaUploadUrlRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string filename = 3;
  string content_type = 4;
  int64 size_bytes = 5;
}

message CreateMediaUploadUrlResponse {
  string upload_url = 1;
  map<string, string> headers = 2;
  string public_url = 3;
  string provider = 4;
  string bucket = 5;
  string object_key = 6;
}

message ListSkuImagesRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string sku_id = 3;
}

message ListSkuImagesResponse {
  repeated SkuImage images = 1;
}

message SetSkuImagesRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string sku_id = 3;
  repeated SkuImageInput images = 4;
  ActorContext actor = 5;
}

message SetSkuImagesResponse {
  repeated SkuImage images = 1;
}

message DigitalAsset {
  string id = 1;
  string sku_id = 2;
  string provider = 3; // s3 | gcs
  string bucket = 4;
  string object_key = 5;
  string content_type = 6;
  int64 size_bytes = 7;
  google.protobuf.Timestamp created_at = 8;
}

message ListDigitalAssetsRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string sku_id = 3;
}

message ListDigitalAssetsResponse {
  repeated DigitalAsset assets = 1;
}

message CreateDigitalAssetRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string sku_id = 3;
  DigitalAsset asset = 4;
  ActorContext actor = 5;
}

message CreateDigitalAssetResponse {
  DigitalAsset asset = 1;
}

message CreateDigitalUploadUrlRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string sku_id = 3;
  string filename = 4;
  string content_type = 5;
  int64 size_bytes = 6;
}

message CreateDigitalUploadUrlResponse {
  string upload_url = 1;
  map<string, string> headers = 2;
  string provider = 3;
  string bucket = 4;
  string object_key = 5;
}

message CreateDigitalDownloadUrlRequest {
  StoreContext store = 1;
  TenantContext tenant = 2;
  string asset_id = 3;
}

message CreateDigitalDownloadUrlResponse {
  string download_url = 1;
  google.protobuf.Timestamp expires_at = 2;
}

message SetInventoryRequest {
  TenantContext tenant = 1;
  string variant_id = 2;
  string location_id = 3;
  int32 stock = 4;
  int32 reserved = 5;
  ActorContext actor = 6;
  StoreContext store = 10;
}

message SetInventoryResponse {
  InventoryAdmin inventory = 1;
}

message ListOrdersRequest {
  TenantContext tenant = 1;
  OrderStatus status = 2;
  PageInfo page = 3;
}

message ListOrdersResponse {
  repeated OrderAdmin orders = 1;
  PageResult page = 2;
}

message UpdateOrderStatusRequest {
  TenantContext tenant = 1;
  string order_id = 2;
  OrderStatus status = 3;
  ActorContext actor = 4;
}

message UpdateOrderStatusResponse {
  OrderAdmin order = 1;
}

message CreateShipmentRequest {
  TenantContext tenant = 1;
  string order_id = 2;
  string vendor_id = 3;
  ShipmentStatus status = 4;
  string tracking_no = 5;
  string carrier = 6;
  ActorContext actor = 7;
}

message CreateShipmentResponse {
  ShipmentAdmin shipment = 1;
}

message UpdateShipmentStatusRequest {
  TenantContext tenant = 1;
  string shipment_id = 2;
  ShipmentStatus status = 3;
  string tracking_no = 4;
  string carrier = 5;
  ActorContext actor = 6;
}

message UpdateShipmentStatusResponse {
  ShipmentAdmin shipment = 1;
}

message CreatePromotionRequest {
  TenantContext tenant = 1;
  string code = 2;
  string discount_type = 3;
  Money value = 4;
  string status = 5;
  google.protobuf.Timestamp starts_at = 6;
  google.protobuf.Timestamp ends_at = 7;
  ActorContext actor = 8;
}

message CreatePromotionResponse {
  PromotionAdmin promotion = 1;
}

message UpdatePromotionRequest {
  TenantContext tenant = 1;
  string promotion_id = 2;
  string code = 3;
  string discount_type = 4;
  Money value = 5;
  string status = 6;
  google.protobuf.Timestamp starts_at = 7;
  google.protobuf.Timestamp ends_at = 8;
  ActorContext actor = 9;
}

message UpdatePromotionResponse {
  PromotionAdmin promotion = 1;
}
